syntax = "proto2";

message OffloadReq {
    required uint64 send_buf        = 1;
    required uint32 send_elems      = 2;
    required uint64 send_datatype   = 3;
    required uint32 send_rkey       = 4;
    required uint64 recv_buf        = 5;
    required uint32 recv_elems      = 6;
    required uint64 recv_datatype   = 7;
    required uint32 recv_rkey       = 8;
    required uint32 cookie          = 9;
}

message OffloadCompletion {
    required uint32 status          = 1;
    required uint32 cookie          = 2;
}